<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="Elementos">
            <menu>
                <item
                    android:id="@+id/nav_inventario"
                    android:icon="@drawable/ic_baseline_kitchen_24px"
                    android:title="@string/Inventario" />
                <item
                    android:id="@+id/nav_productos"
                    android:icon="@drawable/ic_baseline_shopping_cart_24px"
                    android:title="@string/Productos" />
            </menu>
        </item>

        <item android:title="Principal">
            <menu>
                <item
                    android:id="@+id/nav_listas"
                    android:icon="@drawable/ic_baseline_list_24px"
                    android:title="@string/Listas" />
                <item
                    android:id="@+id/nav_compraDelMes"
                    android:icon="@drawable/ic_baseline_calendar_today_24px"
                    android:title="@string/CompraDelMes" />
                <item
                    android:id="@+id/nav_escanear"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/Escanear" />
            </menu>
         </item>

    <item android:title="Ajustes">
        <menu>
            <item
                android:id="@+id/nav_configuracion"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/Configuracion" />
            <item
                android:id="@+id/nav_reset"
                android:icon="@drawable/ic_baseline_restore_24px"
                android:title="@string/Reset" />
        </menu>
    </item>
    </group>
</menu>

